-----------------------------------------------------------------------
** Ecasound - User-visible changes (NEWS)      (last edited: 230700) **
-----------------------------------------------------------------------

About the version numbers... "vx.y.zRt" :

  x = major version  - the overall development status
  y = devel-series   - represents a set of planned features
  z = minor version  - version number of the current development series
  Rt = 'rx'          - stable release number x
  Rt = 'dx'  	     - development version

-----------------------------------------------------------------------

Last officially released version is -*> v1.7.9r13 <*-

??072000 (v1.8.1d14)
	- added: support for internal plugins; modules using external 
		 libraries (ALSA, aRts, libaudiofile, etc) are now 
  	         dynamically loaded on runtime (no unnecessary 
                 dependencies); installed by default to 
  		 /usr/local/lib/ecasound-plugins; see also
	         ecasoundrc(5) man page for related entries
	- added: new ecasound-plugin rpm package
	- remove: support for native ALSA rawmidi temporarily removed
	          (while waiting, use ALSA's OSS-emulation)
	- changed: aRts support enabled by default
	- changed: small change in licensing - see the file COPYING.Qt
	- changed: behaviour of -ete effects wet-% parameter
	- fixed: system readline related fixes (wrobell)
25062000 (v1.8.0d14)
	- added: ecaconvert - a new ecatools app; converts a set of 
		 files to target file format
	- added: support for ALSA 0.6.x (plugin and direct) - thanks 
		 to Jeremy Hall for the patch
	- added: ia-mode - 'cs-list', 'c-list', 'aio-list',
		 'cop-list'; nothing new, but some might find these 
		 a bit more intuitive to use than various status cmds
	- added: more info about audio object status
	- added: --enable-sys-readline (compile against already 
		 installed libreadline)
	- added: rpm-spec file for PLD-Linux - ecasound.pld.spec